<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/txt_receive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="top"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/serial_auto_console_clear"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <RadioButton
                    android:id="@+id/radio_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/serial_auto_console_radio_txt"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_hex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/serial_auto_console_radio_hex"
                    android:textSize="20sp" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkbox_autoclear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:gravity="center"
                android:text="@string/serial_auto_console_autoclear"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    
    <!-- for send data -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:onClick="onClick"
            android:gravity="center_vertical|left"
            android:text="@string/serial_auto_console_status" 
            android:textSize="22sp"
            android:background="@android:color/darker_gray"/>
        
        <TextView
            android:id="@+id/txt_status"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="top"
            android:singleLine="true"
            android:textSize="20sp"
             />
    </LinearLayout>
    
    <!-- for TV loopback data -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:onClick="onClick"
            android:gravity="center_vertical|left"
            android:text="@string/serial_auto_console_loopback" 
            android:textSize="22sp"
            android:background="@android:color/darker_gray"/>
        
        <TextView
            android:id="@+id/txt_tv_back"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="top"
            android:singleLine="true"
            android:textSize="20sp"
             />
    </LinearLayout>

</LinearLayout>